Changement des routes

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <noscript>
-      Appeler le support technique.
+      Contacter le support technique.
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
